# lightwhale

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/: pull_request_template.md
commons/cmake/: options.cmake  setup.cmake  utils.cmake
commons/modules/lwcore/: CHANGELOG  CMakeLists.txt
commons/modules/lwcore/include/lwcore/: lwcore-defs.h
commons/modules/mathlib/: CHANGELOG  CMakeLists.txt
commons/modules/mathlib/include/: mathlib-defs.h
drivers/LwNetworkCard/: CMakeLists.txt
drivers/STMicroelectronics/stm32wl_radio/: CMakeLists.txt
drivers/STMicroelectronics/stm32wlxx_hal/: CMakeLists.txt
features/: README.md
features/feathering/: CHANGELOG  CMakeLists.txt
features/feathering/include/: feathering-defs.h
features/lrhtcp/: CHANGELOG  CMakeLists.txt
features/lrhtcp/include/: lrhtcp-defs.h
features/sharp_whale/: CHANGELOG  CMakeLists.txt
features/sharp_whale/include/: sharp_whale-defs.h
frameworks/: README.md
frameworks/netcards/stm-nucleo-wl55jc1/: CMakeLists.txt
frameworks/netcards/stm-nucleo-wl55jc1/include/: stm-nucleo-wl55jc-defs.h
resources/: README.md
